Added Remove Buttons
Added remove buttons to bottom of each column

--- a/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -29,6 +29,7 @@
             <tr><td class="cardLocation"></td></tr>
             <tr><td class="cardLocation"></td></tr>
             <tr><td class="cardLocation"></td></tr>
+            <tr><td><button id="removeButton">Remove</button></td></tr>
         </table>
     </td>
         <td class="columnOfCards" id="c2">
@@ -47,6 +48,7 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
+                <tr><td><button id="removeButton">Remove</button></td></tr>
             </table>
         </td>
         <td class="columnOfCards" id="c3">
@@ -65,6 +67,8 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
+                <tr><td><button id="removeButton">Remove</button></td></tr>
+
             </table>
         </td>
         <td class="columnOfCards" id="c4">
@@ -83,12 +87,14 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
+                <tr><td><button id="removeButton">Remove</button></td></tr>
             </table>
         </td>
     </tr>
 </table>
 
 <button id="dealButton">Deal</button>
+
 
 
 </body>
