--- a/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -4,6 +4,32 @@
 <script type="text/javascript" src="/assets/webjars/jquery/2.1.3/jquery.js"></script>
 
 <body>
+<table>
+
+    <tr>
+        <th>Values</th>
+        <th>Suits</th>
+    </tr>
+    <tr>
+        <td>A(Ace)</td>
+        <td>S(Spades)</td>
+    </tr>
+    <tr>
+        <td>K(King)</td>
+        <td>C(Clubs)</td>
+    </tr>
+    <tr>
+        <td>Q(Queen)</td>
+        <td>H(Hearts)</td>
+    </tr>
+    <tr>
+        <td>J(Jack)</td>
+        <td>D(Diamonds)</td>
+    </tr>
+    <tr>
+        <td colspan="2">1 - 10 (One through ten.)</td>
+    </tr>
+</table>
 
 <table>
     <tr class="title">
