Change an error
Change legend “1-10” to “2-10”

--- a/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -27,7 +27,7 @@
         <td>D(Diamonds)</td>
     </tr>
     <tr>
-        <td colspan="2">1 - 10 (One through ten.)</td>
+        <td colspan="2">2 - 10 (Two through ten.)</td>
     </tr>
 </table>
 
