Update View -- Changed named of ids for all buttons

--- a/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -58,7 +58,7 @@
             <tr><td class="cardLocation"></td></tr>
             <tr><td class="cardLocation"></td></tr>
             <tr><td class="cardLocation"></td></tr>
-            <tr><td><button id="removeButton">Remove</button></td></tr>
+            <tr><td><button id="btn-col-one">Remove</button></td></tr>
         </table>
     </td>
         <td class="columnOfCards" id="c2">
@@ -77,7 +77,7 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
-                <tr><td><button id="removeButton">Remove</button></td></tr>
+                <tr><td><button id="btn-col-two">Remove</button></td></tr>
             </table>
         </td>
         <td class="columnOfCards" id="c3">
@@ -96,7 +96,7 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
-                <tr><td><button id="removeButton">Remove</button></td></tr>
+                <tr><td><button id="btn-col-three">Remove</button></td></tr>
 
             </table>
         </td>
@@ -116,14 +116,14 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
-                <tr><td><button id="removeButton">Remove</button></td></tr>
+                <tr><td><button id="btn-col-four">Remove</button></td></tr>
             </table>
         </td>
     </tr>
 </table>
 
-<button id="dealButton">Deal</button>
-<button id="resetButton">Reset</button>
+<button id="btn-deal">Deal</button>
+<button id="btn-rest">Reset</button>
 
 
 
