--- a/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -1,7 +1,11 @@
 <h1>Aces Up</h1>
 
+<!-- Stylesheet !-->
 <link href="/assets/css/AcesUp.css" rel="stylesheet">
+
+<!-- Javascripts !-->
 <script type="text/javascript" src="/assets/webjars/jquery/2.1.3/jquery.js"></script>
+<script type="text/javascript" src="/assets/javascript/AcesUp.js"></script>
 
 <body>
 <table>
