-- Update AcesUp   -- Add selector for all remove buttons. -- Update AcesUp View   -- Changed id to col-*   -- Add name to all buttons

--- a/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment1/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -62,7 +62,7 @@
             <tr><td class="cardLocation"></td></tr>
             <tr><td class="cardLocation"></td></tr>
             <tr><td class="cardLocation"></td></tr>
-            <tr><td><button id="btn-col-one">Remove</button></td></tr>
+            <tr><td><button id="col-one" name="btn-remove">Remove</button></td></tr>
         </table>
     </td>
         <td class="columnOfCards" id="c2">
@@ -81,7 +81,7 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
-                <tr><td><button id="btn-col-two">Remove</button></td></tr>
+                <tr><td><button id="col-two" name="btn-remove">Remove</button></td></tr>
             </table>
         </td>
         <td class="columnOfCards" id="c3">
@@ -100,7 +100,7 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
-                <tr><td><button id="btn-col-three">Remove</button></td></tr>
+                <tr><td><button id="col-three" name="btn-remove">Remove</button></td></tr>
 
             </table>
         </td>
@@ -120,7 +120,7 @@
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
                 <tr><td class="cardLocation"></td></tr>
-                <tr><td><button id="btn-col-four">Remove</button></td></tr>
+                <tr><td><button id="col-four" name="btn-remove">Remove</button></td></tr>
             </table>
         </td>
     </tr>
